# django-fido

./: .bumpversion.cfg  .bumpversion.toml  .eslintrc.js  .git-blame-ignore-revs  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  eslint.config.js  jest.config.js  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini  vite.config.js  vitest.setup.js  webpack.config.js
.github/workflows/: js-test.yml  python-test.yml
django_fido/: __init__.py  apps.py  backends.py  constants.py  forms.py  models.py  settings.py  urls.py  utils.py  views.py
django_fido/admin/: __init__.py  authenticator.py
django_fido/js/: fido2-utils.js  fido2.js
django_fido/js-tests/: .eslintrc.js  fido2.test.js
django_fido/js-tests/__snapshots__/: fido2.test.js.snap
django_fido/locale/cs/LC_MESSAGES/: django.po  djangojs.po
django_fido/management/commands/: download_authenticator_metadata.py
django_fido/migrations/: 0001_initial.py  0002_u2fdevice_attestation.py  0003_add_authenticator.py  0004_remove_u2f_device.py  0005_add_attestation_data.py  0006_fill_empty_attestation.py  0007_attestation_data_not_null.py  0008_add_credential_id.py  0009_fill_credential_ids.py  0010_credential_id_not_null.py  0011_remove_credential_data.py  0012_authenticator_label.py  0013_unique_user_label.py  0014_authenticator_metadata.py  0015_unique_metadata_url.py  0016_bigint_store.py  0017_metadata_update.py  0018_authenticator_user_handle.py  0019_upgrade_fido2.py
django_fido/static/django_fido/js/: fido2.js  u2f-registration.js
django_fido/templates/django_fido/: add_authenticator.html  base.html  fido2_form.html  registration_done.html  u2f_form.html
django_fido/tests/: __init__.py  data.py  settings.py  test_admin.py  test_backends.py  test_download_authenticator_metadata.py  test_forms.py  test_models.py  test_settings.py  test_utils.py  test_views.py  urls.py  utils.py
django_fido/tests/data/mds/: NotRoot.cer  bad.txt  correct.txt
