[options]
zip_safe = False

[compile_catalog]
domain = django djangojs
directory = django_fido/locale
locale = cs

[isort]
line_length = 120
skip_glob = */migrations/*
default_section = THIRDPARTY
known_first_party = django_fido
combine_as_imports = True

[flake8]
max-line-length = 120
max-complexity = 10
exclude = */migrations/*

[pydocstyle]
match_dir = '^(?!migrations|\.).*'
add_ignore = D106

[mypy]
check_untyped_defs = True
ignore_missing_imports = True
