[metadata]
version = attr: django_fido.__version__
name = django-fido
description = Django application for FIDO protocol
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
url = https://github.com/CZ-NIC/django-fido
author = Vlastimil Zíma
author_email = vlastimil.zima@nic.cz
keywords = ["django", "fido", "u2f", "fido2"]
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Framework :: Django :: 5.2
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries :: Python Modules
license_files = LICENSE

[options]
python_requires = ~=3.9
include_package_data = true
packages = find:
zip_safe = False
install_requires =
    cryptography
    django>=4.2
    django-app-settings>=0.7.1
    fido2~=1.1
    jwcrypto
    pyopenssl
    requests

[options.extras_require]
quality =
  mypy
  polint
  ruff
test =
  mock
  responses
types =
  types-mock
  types-pyOpenSSL
  types-requests

[compile_catalog]
domain = django djangojs
directory = django_fido/locale
locale = cs

[npm_run]
script = build
